# docxrender

./: README.md  pyproject.toml
.github/workflows/: publish.yml  py-ci.yml
docs/architecture/: 20260625-v1.0-docxkit-minimal-core.md  20260625-v1.0-docxrender-minimal-core.md
docs/implementation-plan/: 20260625-v1.0-docxkit-minimal-core-pr-roadmap.md  20260625-v1.0-docxrender-minimal-core-pr-roadmap.md  20260626-v1.1-docxrender-technical-capability-consolidation-implementation-plan.md
src/docxkit/: __init__.py  api.py  contracts.py  pdf_uno.py  writer.py
src/docxkit/docx/: __init__.py  body.py  fields.py  refresh.py
src/docxrender/: __init__.py  api.py  contracts.py  markdown.py  pdf_uno.py  pdf_uno_worker.py  renderer.py  template.py  writer.py
src/docxrender/docx/: assets.py  body.py  refresh.py
tests/: test_public_contract.py
